@@ -1,3 +1,10 @@
+2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Mutate strings in rcs(1) ‘argv’ less.
+
+	* rcs.c (getassoclst, getaccessor, getstates):
+	Cons a new string in ‘SHARED’ instead of mutating the arg.
+
 2010-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Add abstractions: EDIT_SCRIPT_SHORT, EDIT_SCRIPT_OVERFLOW
